--- a/smieci/app/src/main/res/layout/user_panel.xml
+++ b/smieci/app/src/main/res/layout/user_panel.xml
@@ -144,7 +144,7 @@
                 android:layout_weight="1"
                 android:text="@string/ciemny_motyw"
                 android:layout_gravity="center"
-                android:textColor="@color/black"
+                android:textColor="@color/gray_text"
                 android:textSize="18sp"
                 android:textFontWeight="500"
                 android:layout_marginEnd="15dp"
