--- a/smieci/app/src/main/res/layout/user_panel.xml
+++ b/smieci/app/src/main/res/layout/user_panel.xml
@@ -15,6 +15,7 @@
         android:background="@color/white"
         >
 
+
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="120dp"
@@ -81,149 +82,159 @@
 
         </LinearLayout>
 
+
         <LinearLayout
-            android:id="@+id/powiadomieniaLayout"
-            android:layout_width="350dp"
-            android:layout_height="60dp"
+            android:id="@+id/ustawienia"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="300dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/toggle_options_userpanel"
-            android:elevation="4dp">
+            android:gravity="center"
 
-            <ImageView
-                android:id="@+id/imageHome"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                app:srcCompat="@drawable/notification" />
-
-            <Switch
-                android:id="@+id/powiadomieniaSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="18dp"
-                android:layout_gravity="center"
-                android:text="@string/powiadomienia"
-                android:textColor="@color/gray_text"
-                android:textFontWeight="500"
-                android:layout_marginEnd="15dp"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/motywLayout"
-            android:layout_width="350dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="375dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/toggle_options_userpanel"
-            android:elevation="4dp">
-
-            <ImageView
-                android:id="@+id/imageMotyw"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                app:srcCompat="@drawable/night_mode" />
-
-            <Switch
-                android:id="@+id/motywSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/ciemny_motyw"
-                android:layout_gravity="center"
-                android:textColor="@color/gray_text"
-                android:textSize="18sp"
-                android:textFontWeight="500"
-                android:layout_marginEnd="15dp"
-
-                />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/EdytujAdresZamieszakniaLayout"
-            android:layout_width="350dp"
-            android:layout_height="65dp"
-            android:layout_marginTop="465dp"
-            android:background="@drawable/buttons_userpanel"
-            android:elevation="4dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             >
 
-            <ImageView
-                android:id="@+id/imageView9"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                app:srcCompat="@drawable/home" />
+            <LinearLayout
+                android:id="@+id/powiadomieniaLayout"
+                android:layout_width="350dp"
+                android:layout_height="60dp"
+                android:orientation="horizontal"
+                android:background="@drawable/toggle_options_userpanel"
+                android:elevation="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginHorizontal="6dp">
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/adres_edytuj"
-                android:layout_gravity="center"
-                android:textSize="18dp"
-                android:textFontWeight="500"
-                android:layout_marginEnd="15dp"
-                android:textColor="@color/gray_text"/>
+                <ImageView
+                    android:id="@+id/imageHome"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    app:srcCompat="@drawable/notification" />
+
+                <Switch
+                    android:id="@+id/powiadomieniaSwitch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="18dp"
+                    android:layout_gravity="center"
+                    android:text="@string/powiadomienia"
+                    android:textColor="@color/gray_text"
+                    android:textFontWeight="500"
+                    android:layout_marginEnd="15dp"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/motywLayout"
+                android:layout_width="350dp"
+                android:layout_height="60dp"
+                android:orientation="horizontal"
+                android:background="@drawable/toggle_options_userpanel"
+                android:elevation="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginHorizontal="6dp">
+
+                <ImageView
+                    android:id="@+id/imageMotyw"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    app:srcCompat="@drawable/night_mode" />
+
+                <Switch
+                    android:id="@+id/motywSwitch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/ciemny_motyw"
+                    android:layout_gravity="center"
+                    android:textColor="@color/gray_text"
+                    android:textSize="18sp"
+                    android:textFontWeight="500"
+                    android:layout_marginEnd="15dp"
+
+                    />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/EdytujAdresZamieszakniaLayout"
+                android:layout_width="350dp"
+                android:layout_height="65dp"
+                android:background="@drawable/buttons_userpanel"
+                android:elevation="4dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginHorizontal="6dp"
+                >
+
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    app:srcCompat="@drawable/home" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/adres_edytuj"
+                    android:layout_gravity="center"
+                    android:textSize="18dp"
+                    android:textFontWeight="500"
+                    android:layout_marginEnd="15dp"
+                    android:textColor="@color/gray_text"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ZmienHasloLayout"
+                android:layout_width="350dp"
+                android:layout_height="65dp"
+                android:background="@drawable/buttons_userpanel"
+                android:elevation="4dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginHorizontal="6dp"
+                >
+
+                <ImageView
+                    android:id="@+id/imageView10"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    app:srcCompat="@drawable/padlock" />
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/zmien_haslo"
+                    android:layout_gravity="center"
+                    android:textSize="18dp"
+                    android:textFontWeight="500"
+                    android:layout_marginEnd="15dp"
+                    android:textColor="@color/gray_text"/>
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/ZmienHasloLayout"
-            android:layout_width="350dp"
-            android:layout_height="65dp"
-            android:layout_marginTop="550dp"
-            android:background="@drawable/buttons_userpanel"
-            android:elevation="4dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            >
-
-            <ImageView
-                android:id="@+id/imageView10"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                app:srcCompat="@drawable/padlock" />
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/zmien_haslo"
-                android:layout_gravity="center"
-                android:textSize="18dp"
-                android:textFontWeight="500"
-                android:layout_marginEnd="15dp"
-                android:textColor="@color/gray_text"/>
-        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
